--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Digital Dungeon Master</title>
@@ -7,9 +8,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="/manifest.webapp">
+  <link rel="manifest" href="/manifest.json">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
